k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-expense
  template:
    metadata:
      labels:
        app: frontend-expense
    spec:
      securityContext:
        runAsNonRoot: false
      containers:
        - name: expenseflow-frontend
          image: frontend-expense:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          securityContext:
            allowPrivilegeEscalation: false
