k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: expense-mysql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: expense-mysql

  template:
    metadata:
      labels:
        app: expense-mysql

    spec:
      containers:
        - name: expense-mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: "550m"
              memory: "512Mi"
            limits:
              cpu: "600m"
              memory: "1Gi"

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 10
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: my-pvc
