k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        runAsNonRoot: false
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          
          resources:
            requests: 
              cpu: "100m"
              memory: "128Mi"
            limits:
             cpu: "250m"
             memory: "256Mi"

          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
