k8s/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-expense
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
