k8s/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: expense-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
